# anicat_old

./: .gitignore  AGENTS.md  LICENSE  MPV_GUIDE.md  README.md  SECURITY.md  anicat-server.spec  dev_backend.sh  flake.nix  pyproject.toml  pyrightconfig.json  test_play.py  version.txt
.githooks/: commit-msg  post-commit  pre-commit  prepare-commit-msg
.github/: PULL_REQUEST_TEMPLATE.md
.github/skills/backend-patterns/: SKILL.md
.github/skills/frontend-patterns/: SKILL.md
.github/workflows/: build_dmg_test.yml  ci.yml  nightly.yml  release.yml
Anicat.app/Contents/MacOS/: applet
Anicat.app/Contents/_CodeSignature/: CodeResources
anicat_media/: __init__.py  _version.py
anicat_media/api/: deps.py  main.py
anicat_media/api/routers/: actions.py  config.py  media.py  notifications.py  queue.py  registry.py  status.py  (+1 more)
anicat_media/cli/: cli.py  options.py
anicat_media/core/: constants.py  patterns.py  theme.py  updater.py
anicat_media/utils/: subprocess.py
build_sidecar/: anicat-server-temp.spec  anicat-server.py  sidecar.spec
docs/: CLI_AUDIT.md  EVOLUTION_AUDIT.md  VERSIONING_AUDIT.md
scratch/: check_any.py  check_any_imports.py  check_any_robust.py  check_health.py  check_menu_any.py  debug_any_usage.py  find_missing_any.py  fix_icon_source.py  help_output_final.txt  help_output_main.txt  process_tray.py  resize_tray.py  robust_any_check.py  run_cli.py  test_allmanga.py  test_api.py  test_config.py  test_first_run.py  test_first_run_config.toml  test_pahe.py  test_parser.py  verify_all_imports.py  verify_all_modules.py  verify_any_imports.py  verify_any_v2.py  verify_fix.py  verify_imports.py
scripts/: build_dmg.sh  build_sidecar.py  build_sidecar.sh  bump-version.sh  fix-css-macos26.py  install.sh  install_cli.sh  install_macos.sh  launch_anicat.sh  release.sh  run_provider.sh  setup.sh  setup_bundled_player.sh  setup_bundled_player_windows.ps1
tests/: test_gui.py  test_play.py
tests/api/: test_api_routes.py
web/: AGENTS.md  next.config.ts.export_bak  package-lock.json  package.json
web/public/: manifest-dark.json  manifest.json  quick-pane.html
web/src-tauri/: .gitignore  Cargo.toml  entitlements.mac.plist  tauri.conf.json  tauri.dev.conf.json
(+216 files in other folders)
