[project]
name = "anicat"
version = "4.37.5"
description = "Minimalist Media CLI for macOS."
authors = [
    { name = "Thomas (bonkedbythonk)" },
]
license = "UNLICENSE"
readme = "README.md"

requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "click>=8.1.7",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "inquirerpy>=0.3.4",
    "pillow>=12.2.0",
    "pydantic>=2.11.7",
    "rich>=13.9.2",
    "uvicorn>=0.46.0",
]

[project.urls]
Repository = "https://github.com/bonkedbythonk/anicat"
Homepage = "https://github.com/bonkedbythonk/anicat"

[tool.hatch.build.targets.wheel]
packages = ["anicat_media"]
artifacts = ["anicat_media/api/static"]

[project.scripts]
anicat = 'anicat_media.cli.cli:cli'

[project.optional-dependencies]
standard = [
    "thefuzz>=0.22.1",
    "yt-dlp>=2025.7.21",
    "pycryptodomex>=3.23.0",
    "pypiwin32; sys_platform == 'win32'",   # For Windows-specific functionality
    "pyobjc; sys_platform == 'darwin'",     # For macOS-specific functionality
    "dbus-python; sys_platform == 'linux'", # For Linux-specific functionality (e.g., notifications),
    "plyer>=2.1.0",
    "lxml>=6.0.0",
]
notifications = [
    "pypiwin32; sys_platform == 'win32'",          # For Windows-specific functionality
    "pyobjc; sys_platform == 'darwin'",            # For macOS-specific functionality
    "dbus-python>=1.4.0; sys_platform == 'linux'",
    "plyer>=2.1.0",
]
mpv = ["mpv>=1.0.7"]
torrent = ["libtorrent>=2.0.11"]
lxml = ["lxml>=6.0.0"]
discord = ["pypresence>=4.3.0"]
download = ["pycryptodomex>=3.23.0", "yt-dlp>=2025.7.21"]
torrents = ["libtorrent>=2.0.11"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pyinstaller>=6.11.1",
    "pyright>=1.1.384",
    "pytest>=8.3.3",
    "pytest-httpx>=0.35.0",
    "ruff>=0.6.9",
    "types-lxml>=2026.2.16",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests that require a live network connection",
]
testpaths = ["tests"]
norecursedirs = ["dev", ".venv", "web", "build", "dist"]
